# claude-code-switch

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_CN.md  TROUBLESHOOTING.md  install.sh  pyproject.toml  uninstall.sh
docs/: PYTHON_VERSION.md  PYTHON_VERSION_CN.md
shell/: ccm-wrapper.sh  rc-functions.sh
src/ccm/: __init__.py  __main__.py
src/ccm/cli/: __init__.py  launcher.py  main.py
src/ccm/core/: __init__.py  config.py  exports.py  providers.py
src/ccm/providers/: __init__.py  base.py
src/ccm/settings/: __init__.py  project.py  user.py
src/ccm/shell/: __init__.py  rc_inject.py  wrapper.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_config.py  test_exports.py  test_providers.py  test_settings.py
